디자인 몇몇 변경

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@ layout: default
 ---
 
 <div class="big-picture">
-	
+	<h1 class="hello">반갑습니다!</h1>
+	<p class="second">TEDxYouth@DMHS 이벤트는 현재 준비중입니다.</p>
 </div>
