--- a/staff.html
+++ b/staff.html
@@ -4,7 +4,7 @@ permalink: /staff/
 ---
 
 <div class="staff">	
-	<ul class="staff-list">
+	<ul class="staff-list organizer">
 		<li class="staff">
 			<img class="staff-image" src="http://placehold.it/200x200" />
 			<span class="staff name">손호성</span>
