메일링 리스트 추가, 스폰서 페이지 추가

--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@ layout: default
 ---
 
 <div class="big-picture">
+	<div class="big-picture-inner">
 	<h1 class="hello">반갑습니다!</h1>
 	<p class="second">TEDxYouth@DMHS 이벤트는 현재 준비중입니다.</p>
+	<p class="second mailing">TEDxYouth@DMHS의 새로운 소식을 메일로 받아보세요.</p>
+	<p class="second">이벤트가 어떻게 준비되고 진행되는지, 소소한 이야기를 담은 뉴스레터를 메일로 보내드립니다.</p>
+	
+<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+<div id="mc_embed_signup">
+<form action="//tedxyouthdmhs.us9.list-manage.com/subscribe/post?u=adc5ab11b3c0bc50e73d0ebf8&amp;id=fc392a2ce4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="이메일 주소" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_adc5ab11b3c0bc50e73d0ebf8_fc392a2ce4" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="구독하기" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
 </div>
+</div>
+
+<!--End mc_embed_signup--></div>
