Adding some information...

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 ---
 layout: default
 ---
-<img src="/assets/images/TEDxYouthDMHS-main.png" />
+<h1 class="register"><a class="register" href="http://onoffmix.com/event/43028">참가신청</a></h1>
+<img src="/assets/images/TEDxYouthDMHS-main.png"/>
+<img src="/assets/images/tedx-intro-alt.jpg"/>
+
+<h1 class="register"><a class="register" href="http://onoffmix.com/event/43028">참가신청</a></h1>
